fix: hide x overflow in app component

--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ html {
     line-height: 1.5;
 }
 
+app-root {
+    overflow-x: hidden;
+}
+
 section {
     display: flex;
     flex-direction: column;
